# uart

./: uart-v2.py  uart.py  uart_5_inch.py
c-version/: CMakeLists.txt
c-version/include/: uart_interface.h
c-version/src/: display_driver.c  main.c  uart_interface.c
